# outlook-mcp-server

./: README.md  pyproject.toml  requirements.txt
outlook_mcp_server/backend/: email_composition.py  email_data_extractor.py  validation.py  validators.py
outlook_mcp_server/backend/email_search/: search_common.py
outlook_mcp_server/backend/outlook_session/: email_operations.py
outlook_mcp_server/tools/: __init__.py  email_operations.py  registration.py  viewing_tools.py
