[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outlook-mcp-server"
version = "1.3.0"
description = "MCP server for Outlook email operations"
authors = [{name = "marlonluo2018", email = "marlonluo2018@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp==2.13.1",
    "pywin32==311",
]

[project.optional-dependencies]
attachments = [
    "pypdf>=4.0",
    "python-pptx>=0.6",
    "python-docx>=1.0",
]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/marlonluo2018/outlook-mcp-server"
Repository = "https://github.com/marlonluo2018/outlook-mcp-server"
Issues = "https://github.com/marlonluo2018/outlook-mcp-server/issues"

[project.scripts]
outlook-mcp-server = "outlook_mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["outlook_mcp_server*"]
exclude = ["tests*", "tests", "test_*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"